--- a/app/src/main/res/layout/activity_check_eligibility.xml
+++ b/app/src/main/res/layout/activity_check_eligibility.xml
@@ -1,40 +1,300 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activities.checkEligibility.CheckEligibilityActivity">
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        app:title="Check Eligibility"
-        app:titleTextColor="@color/colorPrimaryDark"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"/>
-    <LinearLayout
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-        <TextView
-            android:id="@+id/can_Apply_LoanTv"
-            android:layout_marginStart="@dimen/mp_10"
-            android:layout_marginTop="@dimen/mp_20"
-            android:layout_marginBottom="@dimen/mp_10"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/handsetRecycler"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+            android:layout_height="match_parent"
+            tools:context=".activities.checkEligibility.CheckEligibilityActivity">
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                app:titleTextColor="@color/colorPrimaryDark"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"/>
+            <LinearLayout
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@id/toolbar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="0dp">
+                <TextView
+                    android:id="@+id/can_Apply_LoanTv"
+                    android:layout_marginStart="@dimen/mp_10"
+                    android:layout_marginTop="@dimen/mp_20"
+                    android:layout_marginBottom="@dimen/mp_10"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <LinearLayout
+                    android:id="@+id/loanInfoLinear"
+                    android:layout_marginTop="@dimen/mp_10"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="@dimen/mp_10"
+                    android:layout_height="wrap_content">
+                    <RelativeLayout
+                        android:id="@+id/rl6month"
+                        android:layout_width="0dp"
+                        android:layout_marginStart="@dimen/mp_10"
+                        android:layout_marginEnd="@dimen/mp_10"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/mp_5"
+                        android:layout_weight="1"
+                        android:background="@drawable/red_rounded"
+                        android:gravity="center_horizontal"
+                        android:visibility="visible"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/txtmonth6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="@dimen/mp_10"
+                            android:text="6 month"
+                            android:textColor="@color/colorWhite"
+                            android:textSize="@dimen/mp_12" />
+
+                        <RelativeLayout
+                            android:id="@+id/circle"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_below="@+id/txtmonth6"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="@dimen/mp_5"
+                            android:background="@drawable/circle"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:layout_centerVertical="true"
+                                android:orientation="vertical"
+                                android:layout_height="wrap_content">
+                                <TextView
+                                    android:id="@+id/txtinstallment6"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:layout_gravity="center"
+                                    android:text="57 "
+                                    android:textColor="@color/Purple"
+                                    android:textSize="12sp" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:text="Installment"
+                                    android:textColor="@color/Purple"
+                                    android:textSize="12sp" />
+                            </LinearLayout>
+
+
+
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/circle"
+                            android:layout_centerHorizontal="true"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/txtamounttext"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="5dp"
+                                android:text="Amount"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="10dp" />
+
+                            <TextView
+                                android:id="@+id/txtamount6"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/txtamounttext"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="5dp"
+                                android:text="7500"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="@dimen/mp_12" />
+
+                            <TextView
+                                android:id="@+id/txtdownpaymenttext"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/txtamount6"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="8dp"
+                                android:text="Down Payment"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="@dimen/mp_10" />
+
+                            <TextView
+                                android:id="@+id/txtdownpayment6"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/txtdownpaymenttext"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="@dimen/mp_5"
+                                android:layout_marginBottom="@dimen/mp_10"
+                                android:text="7500"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="@dimen/mp_12" />
+                        </RelativeLayout>
+                    </RelativeLayout>
+                    <RelativeLayout
+                        android:id="@+id/rl12month"
+                        android:layout_marginEnd="@dimen/mp_10"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/mp_5"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="@dimen/mp_5"
+                        android:background="@drawable/grey_rounded"
+                        android:gravity="center_horizontal"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/txtmonth12"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="@dimen/mp_10"
+                            android:text="12 month"
+                            android:textColor="@color/colorWhite"
+                            android:textSize="@dimen/mp_12" />
+
+                        <RelativeLayout
+                            android:id="@+id/circle12"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_below="@+id/txtmonth12"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="@dimen/mp_5"
+                            android:background="@drawable/circle"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:layout_centerVertical="true"
+                                android:orientation="vertical"
+                                android:layout_height="wrap_content">
+                                <TextView
+                                    android:id="@+id/txtinstallment12"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:layout_gravity="center"
+                                    android:text="57 "
+                                    android:textColor="@color/Purple"
+                                    android:textSize="12sp" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:text="Installment"
+                                    android:textColor="@color/Purple"
+                                    android:textSize="12sp" />
+                            </LinearLayout>
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/circle12"
+                            android:layout_centerHorizontal="true"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/txtamounttext12"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="5dp"
+                                android:text="Amount"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:id="@+id/txtamount12"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/txtamounttext12"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="5dp"
+                                android:text="7500"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:id="@+id/txtdownpaymenttext12"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/txtamount12"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="8dp"
+                                android:text="Down Payment"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:id="@+id/txtdownpayment12"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/txtdownpaymenttext12"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="@dimen/mp_5"
+                                android:layout_marginBottom="@dimen/mp_10"
+                                android:text="7500"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="12sp" />
+                        </RelativeLayout>
+
+                    </RelativeLayout>
+
+                </LinearLayout>
+                <TextView
+                    android:text="Loan information Details"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="@dimen/mp_10"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/handsetRecycler"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+
+            </LinearLayout>
+            <androidx.appcompat.widget.AppCompatButton
+                android:onClick="applyForLoanOnClick"
+                android:text="@string/apply_for_loan_btn"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="@dimen/mp_max"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                android:background="@drawable/btn_rounded_magenta"
+                android:layout_marginStart="@dimen/mp_max"
+                android:layout_marginEnd="@dimen/mp_max"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
